; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_runtime.c_write_pipe_thread.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_runtime.c_write_pipe_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@keepalive_pipe = common dso_local global i32* null, align 8
@fuse_pid = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @write_pipe_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @write_pipe_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [32 x i8], align 16
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %6 = call i32 @memset(i8* %5, i8 signext 120, i32 32)
  br label %7

7:                                                ; preds = %1, %19
  %8 = load i32*, i32** @keepalive_pipe, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %12 = call i32 @write(i32 %10, i8* %11, i32 32)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %19

15:                                               ; preds = %7
  %16 = load i32, i32* @fuse_pid, align 4
  %17 = load i32, i32* @SIGTERM, align 4
  %18 = call i32 @kill(i32 %16, i32 %17)
  br label %20

19:                                               ; preds = %7
  br label %7

20:                                               ; preds = %15
  ret i8* null
}

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
